--- a/attacks.ipynb
+++ b/attacks.ipynb
@@ -1098,7 +1098,7 @@
    "source": [
     "x = PrettyTable()\n",
     "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
-    "S,number_node, k_avg,c_avg, b_avg ,pr_avg, ev_avg, short_path, diameter,cluster=update_degree_attack(c2c,10)\n",
+    "S,number_node, k_avg,c_avg, b_avg ,pr_avg, ev_avg, short_path, diameter,cluster=update_degree_attack(c2c,20)\n",
     "x_n = [\"c\", \"N\",\"k_avg\", \"diameter\",\"short_path\",\"c_avg\",\"b_avg\",\"pr_avg\",\"ev_avg\",\"cluster\",\"S\"]\n",
     "x.add_column(x_n[0], range(len(S)))\n",
     "x.add_column(x_n[1], number_node)\n",
@@ -1124,9 +1124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python2"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
